--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,7 @@ memo = {
   collection.cache = "cache"
   collection.userMessage = "userMessage"
   collection.socketMessage = "socketMessage"
+  collection.notifyMessage = "notifyMessage"
 }
 
 hub = {
