--- a/conf/application.conf
+++ b/conf/application.conf
@@ -405,4 +405,20 @@ userMessage {
   actor {
     name: "user_message"
   }
+  collection.userMessage = "userMessage"
+  collection.notify = "notify"
+}
+
+relation {
+  collection {
+    relation = "relation"
+  }
+  actor {
+    notify_freq = 3
+    name = "relation_actor"
+  }
+  limit {
+    follow = 100
+    block = 100
+  }
 }
