--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-if": "1.2.5",
     "gulp-minify-css": "^1.2.0",
     "gulp-msx": "*",
+    "mithril": "^0.2.0",
     "gulp-rename": "*",
     "gulp-sass": "*",
     "gulp-sourcemaps": "^1.5.0",
