--- a/conf/application.conf
+++ b/conf/application.conf
@@ -84,6 +84,7 @@ hub = {
     move_broadcast = "move_broadcast"
     user_register = "user_register"
     user_message = "user_message"
+    chat_room = "chat_room"
   }
 }
 
@@ -400,6 +401,13 @@ pref {
   }
 }
 
+chatRoom {
+  actor {
+    name: "chat_room"
+  }
+  collection.roomInfo = "roomInfo"
+  collection.roomMessage = "roomMessage"
+}
 
 userMessage {
   actor {
