--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,16 @@ hub = {
     user_message = "user_message"
     chat_room = "chat_room"
   }
+
+  socket {
+    site = "socket_site"
+    lobby = "socket_lobby"
+    round = "socket_route"
+    tournament = "socket_tournament"
+    simul = "socket_simul"
+    monitor = "socket_monitor"
+    hub = "socket_hub"
+  }
 }
 
 es {
@@ -358,7 +368,7 @@ site {
     uid {
       ttl = 3600
     }
-    name = "site-socket"
+    name = "socket_site"
   }
 
 
@@ -381,10 +391,10 @@ socket {
 
 monitor {
   actor {
-    name = "monitor-actor-name"
+    name = "actor_monitor"
   }
   socket {
-    name = "monitor-socket-name"
+    name = "socket_monitor"
     uid {
       ttl = 3600
     }
