--- a/conf/application.conf
+++ b/conf/application.conf
@@ -673,6 +673,8 @@ teamSearch {
 relation {
   collection {
     relation = "relation"
+    makeFriend = "makeFriend"
+    friendship = "friendship"
   }
   actor {
     notify_freq = 3
