--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,7 @@ memo = {
 
 hub {
   actor {
+    activity = ${activity.actor.name}
     user_message = ${userMessage.actor.name}
     chat_room = ${chatRoom.actor.name}
     game {
@@ -686,6 +687,16 @@ relation {
   }
 }
 
+
+activity {
+  collection {
+    post = "post"
+  }
+  actor {
+    name = "activityActor"
+  }
+}
+
 dbplugin = disabled
 ehcacheplugin = disabled
 
@@ -696,4 +707,5 @@ akka {
   log-config-on-start = off
   log-dead-letters-during-shutdown = off
 }
+play.akka.actor.typed.timeout=10s
 forcedev = false
