--- a/conf/application.conf
+++ b/conf/application.conf
@@ -520,7 +520,7 @@ net {
   ip = "188.166.254.203"
   asset {
     domain = ${net.domain}
-    version = 15
+    version = 17
   }
 }
 
@@ -691,6 +691,8 @@ relation {
 activity {
   collection {
     post = "post"
+    comment = "comment"
+    childComment = "childComment"
   }
   actor {
     name = "activityActor"
