--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,8 @@ play {
 
 }
 
+assets.defaultCache="max-age=290304000"
+
 parsers.MultipartFormData.maxLength=10240K
 
 # Simple configuration (by URI)
@@ -520,7 +522,7 @@ net {
   ip = "188.166.254.203"
   asset {
     domain = ${net.domain}
-    version = 20
+    version = 21
   }
 }
 
