--- a/conf/application.conf
+++ b/conf/application.conf
@@ -522,7 +522,7 @@ net {
   ip = "188.166.254.203"
   asset {
     domain = ${net.domain}
-    version = 21
+    version = 22
   }
 }
 
@@ -689,6 +689,15 @@ relation {
   }
 }
 
+question {
+  collection {
+    question = "question"
+    answer = "answer"
+  }
+  actor {
+    name = "questionActor"
+  }
+}
 
 activity {
   collection {
