--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,6 +59,7 @@ memo = {
 
 hub {
   actor {
+    question = ${question.actor.name}
     activity = ${activity.actor.name}
     user_message = ${userMessage.actor.name}
     chat_room = ${chatRoom.actor.name}
@@ -522,7 +523,7 @@ net {
   ip = "188.166.254.203"
   asset {
     domain = ${net.domain}
-    version = 22
+    version = 23
   }
 }
 
@@ -693,6 +694,7 @@ question {
   collection {
     question = "question"
     answer = "answer"
+    commentQA = "commentQA"
   }
   actor {
     name = "questionActor"
