--- a/conf/application.conf
+++ b/conf/application.conf
@@ -516,14 +516,14 @@ i18n {
 }
 
 net {
-  domain = "luanlv.info"
+  domain = "venglish.net"
   protocol = "http://"
   base_url = ${net.protocol}${net.domain}
   base_en_url = ${net.protocol}en.${net.domain}
-  ip = "188.166.254.203"
+  ip = "103.192.177.156"
   asset {
     domain = ${net.domain}
-    version = 27
+    version = 29
   }
 }
 
