--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,9 +16,9 @@ play {
   }
   http {
     session {
-      cookieName = "englishsofun"
+      cookieName = "venglish"
       maxAge = 365 days
-      domain = ".luanlv.info"
+      domain = "venglish.net"
     }
   }
   ws {
@@ -523,7 +523,7 @@ net {
   ip = "103.192.177.156"
   asset {
     domain = ${net.domain}
-    version = 36
+    version = 37
   }
 }
 
