--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,7 @@ play {
     session {
       cookieName = "venglish"
       maxAge = 365 days
-      domain = "venglish.net"
+      domain = ".venglish.net"
     }
   }
   ws {
@@ -523,7 +523,7 @@ net {
   ip = "103.192.177.156"
   asset {
     domain = ${net.domain}
-    version = 38
+    version = 39
   }
 }
 
