--- a/conf/application.conf
+++ b/conf/application.conf
@@ -516,14 +516,14 @@ i18n {
 }
 
 net {
-  domain = "venglish.net"
+  domain = "www.venglish.net"
   protocol = "http://"
   base_url = ${net.protocol}${net.domain}
   base_en_url = ${net.protocol}en.${net.domain}
   ip = "103.192.177.156"
   asset {
     domain = ${net.domain}
-    version = 39
+    version = 40
   }
 }
 
