--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 logs
 #target
 node_modules
-/.sass-cache
-/.idea
-/.idea_modules
-/.classpath
-/.project
-/.settings
+.sass-cache
+.idea
+.idea_modules
+.classpath
+.project
+.settings
 /RUNNING_PID
-/project/target
-/target
+project/target
+target
 nohup.out
-/modules/*/target
+modules/*/target
